Fix blurry

--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -108,10 +108,6 @@ form {
                 background: none;
             }
         }
-
-        &:active {
-            transform: scale(0.9);
-        }
     }
 
     // &.hideForm {
