--- a/src/components/ExperienceCard/ExperienceCard.module.scss
+++ b/src/components/ExperienceCard/ExperienceCard.module.scss
@@ -23,8 +23,6 @@ li {
 
         &:hover {
             background-color: rgba(255, 255, 255, 0.8);
-            // transform: translate(10px, 0);
-            transform: scale(1.03);
         }
 
         &:not(:first-child) {
