--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -98,7 +98,6 @@ section {
 
         &:hover {
             background-color: rgba(255, 255, 255, 0.8);
-            transform: scale(1.03);
         }
 
         .image {
